restclient: added more routes train/service.go: added createtrain, get train endpoints auth/jwt.go: added role check function
